--- a/index.html
+++ b/index.html
@@ -206,6 +206,56 @@
         width: 90%;
     }
     }
+    @media (max-width: 768px) {
+    nav {
+        flex-direction: column;
+        align-items: flex-end;
+        width: 100%;
+        margin-top: 10px;
+    }
+
+    nav a {
+        width: 90%;
+        text-align: center;
+        margin: 5px 0;
+        padding: 12px 0;
+    }
+
+    .logo {
+        flex-direction: column;
+        align-items: flex-start;
+    }
+
+    header {
+        flex-direction: column;
+        align-items: flex-start;
+    }
+}
+@media (max-width: 768px) {
+    nav {
+        flex-direction: column;
+        align-items: flex-end;
+        width: 100%;
+        margin-top: 10px;
+    }
+
+    nav a {
+        width: 90%;
+        text-align: center;
+        margin: 5px 0;
+        padding: 12px 0;
+    }
+
+    .logo {
+        flex-direction: column;
+        align-items: flex-start;
+    }
+
+    header {
+        flex-direction: column;
+        align-items: flex-start;
+    }
+}
 </style>
 </head>
 <body>
