--- a/register.html
+++ b/register.html
@@ -9,7 +9,10 @@
 <body class="bg-light">
 
 <header>
-<div class="logo">ГАППОУ КК ЛСПК</div>
+<div class="logo">
+    <img src="img/logo.png" alt="Логотип МойПедагог" class="logo-img">
+    <span>МойПедагог</span>
+</div>
 <nav>
     <a href="index.html">Главная</a>
 </nav>
