--- a/login.html
+++ b/login.html
@@ -9,13 +9,14 @@
 <body class="bg-light">
 
 <header>
-<div class="logo">
-    <img src="img/logo.png" alt="Логотип МойПедагог" class="logo-img">
-    <span>МойПедагог</span>
-</div>
-<nav>
-    <a href="index.html">Главная</a>
-</nav>
+  <div class="logo">
+      <img src="img/logo.png" alt="Логотип МойПедагог" class="logo-img">
+      <span>МойПедагог</span>
+  </div>
+  <button class="menu-toggle" id="menuToggle">&#9776;</button>
+  <nav>
+      <a href="index.html">Главная</a>
+  </nav>
 </header>
 
 <div class="container">
@@ -78,6 +79,9 @@ if (user.role === "teacher") {
 } else {
     alert("Неизвестная роль.");
 }
+});
+    document.getElementById('menuToggle').addEventListener('click', function() {
+    document.querySelector('nav').classList.toggle('active');
 });
 </script>
 
