--- a/teacher_dashboard.html
+++ b/teacher_dashboard.html
@@ -1,15 +1,270 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-<meta charset="UTF-8">
-<title>Панель преподавателя</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" href="teacher_dashboard.css">
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<title>МойПедагог — Главная</title>
+<style>
+    body {
+    font-family: 'Roboto', sans-serif;
+    background: linear-gradient(135deg, #e0f7fa, #fff);
+    margin: 0;
+    padding: 0;
+    color: #333;
+    }
+
+    header {
+    background-color: #006893;
+    color: white;
+    padding: 20px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+    }
+
+    .logo {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    font-size: 2rem;
+    font-weight: bold;
+    }
+
+    .logo-img {
+    height: 45px;
+    }
+
+    nav {
+    display: flex;
+    gap: 20px;
+    }
+
+    nav a {
+    color: white;
+    text-decoration: none;
+    padding: 10px 20px;
+    border-radius: 25px;
+    background-color: #1d5deb;
+    transition: background-color 0.3s, transform 0.3s;
+    }
+
+    nav a:hover {
+    background-color: #184cbc;
+    transform: scale(1.05);
+    }
+
+    main {
+    padding: 40px 20px;
+    max-width: 1200px;
+    margin: 0 auto;
+    }
+
+    .intro {
+    background: linear-gradient(135deg, #dff1f5, #ffffff);
+    text-align: center;
+    padding: 40px 20px;
+    border-radius: 10px;
+    box-shadow: 0 4px 15px rgba(0, 0, 0, 0.05);
+    margin-bottom: 50px;
+    }
+
+    .intro h1 {
+    color: #006893;
+    font-size: 2.5rem;
+    margin-bottom: 20px;
+    }
+
+    .intro p {
+    font-size: 1.1rem;
+    line-height: 1.6;
+    max-width: 800px;
+    margin: 0 auto 20px;
+    }
+
+    .main-btn {
+    display: inline-block;
+    margin-top: 20px;
+    padding: 12px 25px;
+    font-size: 1.1rem;
+    background-color: #1d5deb;
+    color: white;
+    border-radius: 30px;
+    text-decoration: none;
+    transition: background-color 0.3s ease;
+    }
+
+    .main-btn:hover {
+    background-color: #184cbc;
+    }
+
+    .motto {
+    font-style: italic;
+    font-size: 1.1rem;
+    color: #555;
+    margin-top: 25px;
+    }
+
+    .section-line {
+    border: none;
+    height: 2px;
+    background: #006893;
+    width: 80%;
+    margin: 40px auto;
+    }
+
+    .instructions h2, .features h2 {
+    text-align: center;
+    color: #006893;
+    margin-bottom: 30px;
+    }
+
+    .block-container {
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+    flex-wrap: wrap;
+    }
+
+    .block {
+    background-color: #ffffff;
+    border: 1px solid #ddd;
+    border-radius: 10px;
+    padding: 20px;
+    width: 300px;
+    box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
+    text-align: center;
+    }
+
+    .block-icon {
+    width: 50px;
+    margin-bottom: 10px;
+    }
+
+    .block h3 {
+    color: #006893;
+    font-size: 1.3rem;
+    margin-bottom: 10px;
+    }
+
+    .block ol {
+    text-align: left;
+    padding-left: 20px;
+    }
+
+    .features {
+    text-align: center;
+    margin-top: 50px;
+    }
+
+    .feature-list {
+    list-style: none;
+    padding: 0;
+    font-size: 1.1rem;
+    color: #333;
+    }
+
+    .feature-list li {
+    margin: 10px 0;
+    }
+
+    footer {
+    background-color: #006893;
+    color: white;
+    padding: 25px 20px;
+    }
+
+    .footer-content {
+    max-width: 1200px;
+    margin: 0 auto;
+    }
+
+    .footer-info p {
+    margin: 5px 0;
+    }
+
+    .footer-bottom {
+    text-align: center;
+    margin-top: 20px;
+    border-top: 1px solid rgba(255, 255, 255, 0.2);
+    padding-top: 10px;
+    font-size: 0.9rem;
+    }
+
+    @media (max-width: 768px) {
+    nav {
+        flex-direction: column;
+        align-items: flex-end;
+    }
+
+    .block-container {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .block {
+        width: 90%;
+    }
+    }
+    @media (max-width: 768px) {
+    nav {
+        flex-direction: column;
+        align-items: flex-end;
+        width: 100%;
+        margin-top: 10px;
+    }
+
+    nav a {
+        width: 90%;
+        text-align: center;
+        margin: 5px 0;
+        padding: 12px 0;
+    }
+
+    .logo {
+        flex-direction: column;
+        align-items: flex-start;
+    }
+
+    header {
+        flex-direction: column;
+        align-items: flex-start;
+    }
+}
+@media (max-width: 768px) {
+    nav {
+        flex-direction: column;
+        align-items: flex-end;
+        width: 100%;
+        margin-top: 10px;
+    }
+
+    nav a {
+        width: 90%;
+        text-align: center;
+        margin: 5px 0;
+        padding: 12px 0;
+    }
+
+    .logo {
+        flex-direction: column;
+        align-items: flex-start;
+    }
+
+    header {
+        flex-direction: column;
+        align-items: flex-start;
+    }
+}
+</style>
 </head>
 <body>
 
 <header>
-<div class="logo">ГАППОУ КК ЛСПК</div>
+<div class="logo">
+    <img src="img/logo.png" alt="Логотип МойПедагог" class="logo-img">
+    <span>МойПедагог</span>
+</div>
 <nav>
     <a href="edit_teacher.html" class="btn">Редактировать анкету</a>
     <a href="#" id="logoutBtn" class="btn">Выйти</a>
