--- a/teacher_dashboard.html
+++ b/teacher_dashboard.html
@@ -1,340 +1,244 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>МойПедагог — Главная</title>
-<style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>МойПедагог — Панель преподавателя</title>
+  <style>
     body {
-    font-family: 'Roboto', sans-serif;
-    background: linear-gradient(135deg, #e0f7fa, #fff);
-    margin: 0;
-    padding: 0;
-    color: #333;
+      font-family: 'Roboto', sans-serif;
+      background: linear-gradient(135deg, #e0f7fa, #fff);
+      margin: 0;
+      padding: 0;
+      color: #333;
     }
 
     header {
-    background-color: #006893;
-    color: white;
-    padding: 20px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+      background-color: #006893;
+      color: white;
+      padding: 20px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+      flex-wrap: wrap;
     }
 
     .logo {
-    display: flex;
-    align-items: center;
-    gap: 10px;
-    font-size: 2rem;
-    font-weight: bold;
+      display: flex;
+      align-items: center;
+      gap: 10px;
+      font-size: 2rem;
+      font-weight: bold;
     }
 
     .logo-img {
-    height: 45px;
+      height: 45px;
     }
 
     nav {
-    display: flex;
-    gap: 20px;
+      display: flex;
+      gap: 15px;
+      flex-wrap: wrap;
     }
 
     nav a {
-    color: white;
-    text-decoration: none;
-    padding: 10px 20px;
-    border-radius: 25px;
-    background-color: #1d5deb;
-    transition: background-color 0.3s, transform 0.3s;
+      color: white;
+      text-decoration: none;
+      padding: 10px 20px;
+      border-radius: 25px;
+      background-color: #1d5deb;
+      transition: background-color 0.3s, transform 0.3s;
     }
 
     nav a:hover {
-    background-color: #184cbc;
-    transform: scale(1.05);
+      background-color: #184cbc;
+      transform: scale(1.05);
     }
 
     main {
-    padding: 40px 20px;
-    max-width: 1200px;
-    margin: 0 auto;
+      padding: 30px 20px;
+      max-width: 1200px;
+      margin: 0 auto;
     }
 
-    .intro {
-    background: linear-gradient(135deg, #dff1f5, #ffffff);
-    text-align: center;
-    padding: 40px 20px;
-    border-radius: 10px;
-    box-shadow: 0 4px 15px rgba(0, 0, 0, 0.05);
-    margin-bottom: 50px;
+    h1, h3 {
+      color: #006893;
     }
 
-    .intro h1 {
-    color: #006893;
-    font-size: 2.5rem;
-    margin-bottom: 20px;
+    .profile-wrapper {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 20px;
+      margin-bottom: 40px;
     }
 
-    .intro p {
-    font-size: 1.1rem;
-    line-height: 1.6;
-    max-width: 800px;
-    margin: 0 auto 20px;
+    .profile-info {
+      flex: 2;
     }
 
-    .main-btn {
-    display: inline-block;
-    margin-top: 20px;
-    padding: 12px 25px;
-    font-size: 1.1rem;
-    background-color: #1d5deb;
-    color: white;
-    border-radius: 30px;
-    text-decoration: none;
-    transition: background-color 0.3s ease;
+    .profile-photo {
+      flex: 1;
+      display: flex;
+      justify-content: center;
+      align-items: center;
     }
 
-    .main-btn:hover {
-    background-color: #184cbc;
+    .profile-photo img {
+      max-width: 200px;
+      border-radius: 10px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.1);
     }
 
-    .motto {
-    font-style: italic;
-    font-size: 1.1rem;
-    color: #555;
-    margin-top: 25px;
+    .photo-placeholder {
+      font-style: italic;
+      color: #888;
     }
 
-    .section-line {
-    border: none;
-    height: 2px;
-    background: #006893;
-    width: 80%;
-    margin: 40px auto;
+    .table {
+      width: 100%;
+      border-collapse: collapse;
+      margin-top: 10px;
     }
 
-    .instructions h2, .features h2 {
-    text-align: center;
-    color: #006893;
-    margin-bottom: 30px;
+    .table th, .table td {
+      border: 1px solid #ccc;
+      padding: 10px;
+      text-align: left;
     }
 
-    .block-container {
-    display: flex;
-    justify-content: center;
-    gap: 20px;
-    flex-wrap: wrap;
+    .table th {
+      background-color: #f0f8fa;
     }
 
-    .block {
-    background-color: #ffffff;
-    border: 1px solid #ddd;
-    border-radius: 10px;
-    padding: 20px;
-    width: 300px;
-    box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
-    text-align: center;
+    .btn {
+      display: inline-block;
+      margin-top: 20px;
+      padding: 10px 20px;
+      background-color: #1d5deb;
+      color: white;
+      text-decoration: none;
+      border-radius: 25px;
+      transition: background-color 0.3s;
     }
 
-    .block-icon {
-    width: 50px;
-    margin-bottom: 10px;
-    }
-
-    .block h3 {
-    color: #006893;
-    font-size: 1.3rem;
-    margin-bottom: 10px;
-    }
-
-    .block ol {
-    text-align: left;
-    padding-left: 20px;
-    }
-
-    .features {
-    text-align: center;
-    margin-top: 50px;
-    }
-
-    .feature-list {
-    list-style: none;
-    padding: 0;
-    font-size: 1.1rem;
-    color: #333;
-    }
-
-    .feature-list li {
-    margin: 10px 0;
-    }
-
-    footer {
-    background-color: #006893;
-    color: white;
-    padding: 25px 20px;
-    }
-
-    .footer-content {
-    max-width: 1200px;
-    margin: 0 auto;
-    }
-
-    .footer-info p {
-    margin: 5px 0;
-    }
-
-    .footer-bottom {
-    text-align: center;
-    margin-top: 20px;
-    border-top: 1px solid rgba(255, 255, 255, 0.2);
-    padding-top: 10px;
-    font-size: 0.9rem;
+    .btn:hover {
+      background-color: #184cbc;
     }
 
     @media (max-width: 768px) {
-    nav {
+      header {
         flex-direction: column;
-        align-items: flex-end;
-    }
+        align-items: flex-start;
+      }
 
-    .block-container {
+      .logo {
+        flex-direction: column;
+        align-items: flex-start;
+      }
+
+      nav {
+        flex-direction: column;
+        align-items: flex-start;
+        width: 100%;
+        margin-top: 10px;
+      }
+
+      nav a {
+        width: 100%;
+        text-align: center;
+        margin: 5px 0;
+      }
+
+      .profile-wrapper {
         flex-direction: column;
         align-items: center;
-    }
+      }
 
-    .block {
-        width: 90%;
+      .profile-photo img {
+        max-width: 100%;
+      }
     }
-    }
-    @media (max-width: 768px) {
-    nav {
-        flex-direction: column;
-        align-items: flex-end;
-        width: 100%;
-        margin-top: 10px;
-    }
-
-    nav a {
-        width: 90%;
-        text-align: center;
-        margin: 5px 0;
-        padding: 12px 0;
-    }
-
-    .logo {
-        flex-direction: column;
-        align-items: flex-start;
-    }
-
-    header {
-        flex-direction: column;
-        align-items: flex-start;
-    }
-}
-@media (max-width: 768px) {
-    nav {
-        flex-direction: column;
-        align-items: flex-end;
-        width: 100%;
-        margin-top: 10px;
-    }
-
-    nav a {
-        width: 90%;
-        text-align: center;
-        margin: 5px 0;
-        padding: 12px 0;
-    }
-
-    .logo {
-        flex-direction: column;
-        align-items: flex-start;
-    }
-
-    header {
-        flex-direction: column;
-        align-items: flex-start;
-    }
-}
-</style>
+  </style>
 </head>
 <body>
 
 <header>
-<div class="logo">
+  <div class="logo">
     <img src="img/logo.png" alt="Логотип МойПедагог" class="logo-img">
     <span>МойПедагог</span>
-</div>
-<nav>
+  </div>
+  <nav>
     <a href="edit_teacher.html" class="btn">Редактировать анкету</a>
     <a href="#" id="logoutBtn" class="btn">Выйти</a>
-</nav>
+  </nav>
 </header>
 
-<div class="container">
-<h1>Панель преподавателя</h1>
-<div id="teacherInfo"></div>
-<hr>
-<h3>Расписание</h3>
-<table class="table">
+<main>
+  <h1>Панель преподавателя</h1>
+  <div id="teacherInfo"></div>
+
+  <hr>
+
+  <h3>Расписание</h3>
+  <table class="table">
     <thead>
-    <tr><th>День</th><th>Урок</th><th>Предмет</th><th>Кабинет</th></tr>
+      <tr><th>День</th><th>Урок</th><th>Предмет</th><th>Кабинет</th></tr>
     </thead>
     <tbody id="scheduleTable"></tbody>
-</table>
-<a href="schedule.html" class="btn">Добавить расписание</a>
-</div>
+  </table>
+
+  <a href="schedule.html" class="btn">Добавить расписание</a>
+</main>
 
 <script>
-const currentUser = JSON.parse(localStorage.getItem("currentUser"));
-if (!currentUser || currentUser.role !== "teacher") {
-window.location.href = "login.html";
-}
+  const currentUser = JSON.parse(localStorage.getItem("currentUser"));
+  if (!currentUser || currentUser.role !== "teacher") {
+    window.location.href = "login.html";
+  }
 
-document.getElementById("logoutBtn").addEventListener("click", () => {
-localStorage.removeItem("currentUser");
-window.location.href = "login.html";
-});
+  document.getElementById("logoutBtn").addEventListener("click", () => {
+    localStorage.removeItem("currentUser");
+    window.location.href = "login.html";
+  });
 
-// Отображение информации преподавателя
-const teacherData = JSON.parse(localStorage.getItem("teacher_" + currentUser.username));
-if (teacherData) {
-const infoHtml = `
-    <div class="profile-wrapper">
-    <div class="profile-info">
-        <h3>Ваша анкета</h3>
-        <table class="table">
-        <tr><th>Фамилия</th><td>${teacherData.last_name || ''}</td></tr>
-        <tr><th>Имя</th><td>${teacherData.first_name || ''}</td></tr>
-        <tr><th>Отчество</th><td>${teacherData.middle_name || ''}</td></tr>
-        <tr><th>Дата рождения</th><td>${teacherData.birth_date || ''}</td></tr>
-        <tr><th>Email</th><td>${teacherData.email || ''}</td></tr>
-        <tr><th>Телефон</th><td>${teacherData.phone || ''}</td></tr>
-        <tr><th>Должность</th><td>${teacherData.position || ''}</td></tr>
-        <tr><th>Кафедра</th><td>${teacherData.department || ''}</td></tr>
-        <tr><th>Образование</th><td>${teacherData.education || ''}</td></tr>
-        <tr><th>Квалификация</th><td>${teacherData.qualification || ''}</td></tr>
-        <tr><th>Стаж работы</th><td>${teacherData.work_experience || ''}</td></tr>
-        <tr><th>Предметы</th><td>${teacherData.subjects || ''}</td></tr>
-        <tr><th>Методы преподавания</th><td>${teacherData.teaching_methods || ''}</td></tr>
-        <tr><th>Научная деятельность</th><td>${teacherData.scientific_activity || ''}</td></tr>
-        </table>
-    </div>
-    <div class="profile-photo">
-        ${teacherData.profile_photo ? `<img src="${teacherData.profile_photo}" alt="Фото">` : '<div class="photo-placeholder">Фото не загружено</div>'}
-    </div>
-    </div>`;
-document.getElementById("teacherInfo").innerHTML = infoHtml;
-}
+  const teacherData = JSON.parse(localStorage.getItem("teacher_" + currentUser.username));
+  if (teacherData) {
+    const infoHtml = `
+      <div class="profile-wrapper">
+        <div class="profile-info">
+          <h3>Ваша анкета</h3>
+          <table class="table">
+            <tr><th>Фамилия</th><td>${teacherData.last_name || ''}</td></tr>
+            <tr><th>Имя</th><td>${teacherData.first_name || ''}</td></tr>
+            <tr><th>Отчество</th><td>${teacherData.middle_name || ''}</td></tr>
+            <tr><th>Дата рождения</th><td>${teacherData.birth_date || ''}</td></tr>
+            <tr><th>Email</th><td>${teacherData.email || ''}</td></tr>
+            <tr><th>Телефон</th><td>${teacherData.phone || ''}</td></tr>
+            <tr><th>Должность</th><td>${teacherData.position || ''}</td></tr>
+            <tr><th>Кафедра</th><td>${teacherData.department || ''}</td></tr>
+            <tr><th>Образование</th><td>${teacherData.education || ''}</td></tr>
+            <tr><th>Квалификация</th><td>${teacherData.qualification || ''}</td></tr>
+            <tr><th>Стаж работы</th><td>${teacherData.work_experience || ''}</td></tr>
+            <tr><th>Предметы</th><td>${teacherData.subjects || ''}</td></tr>
+            <tr><th>Методы преподавания</th><td>${teacherData.teaching_methods || ''}</td></tr>
+            <tr><th>Научная деятельность</th><td>${teacherData.scientific_activity || ''}</td></tr>
+          </table>
+        </div>
+        <div class="profile-photo">
+          ${teacherData.profile_photo ? `<img src="${teacherData.profile_photo}" alt="Фото">` : '<div class="photo-placeholder">Фото не загружено</div>'}
+        </div>
+      </div>`;
+    document.getElementById("teacherInfo").innerHTML = infoHtml;
+  }
 
-// Расписание
-const schedule = JSON.parse(localStorage.getItem("schedule_" + currentUser.username)) || [];
-const tbody = document.getElementById("scheduleTable");
-schedule.forEach(row => {
-const tr = document.createElement("tr");
-tr.innerHTML = `<td>${row.day_of_week}</td><td>${row.lesson_number}</td><td>${row.subject}</td><td>${row.room}</td>`;
-tbody.appendChild(tr);
-});
+  const schedule = JSON.parse(localStorage.getItem("schedule_" + currentUser.username)) || [];
+  const tbody = document.getElementById("scheduleTable");
+  schedule.forEach(row => {
+    const tr = document.createElement("tr");
+    tr.innerHTML = `<td>${row.day_of_week}</td><td>${row.lesson_number}</td><td>${row.subject}</td><td>${row.room}</td>`;
+    tbody.appendChild(tr);
+  });
 </script>
 
 </body>
