--- a/edit_teacher.html
+++ b/edit_teacher.html
@@ -1,75 +1,235 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-    <meta charset="UTF-8">
-    <title>Редактировать анкету</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="teacher_dashboard.css" rel="stylesheet">
+  <meta charset="UTF-8">
+  <title>Редактировать анкету</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- Подключение Bootstrap -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  
+  <style>
+    /* === ШАПКА === */
+    header {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      background-color: rgb(0, 104, 147);
+      padding: 15px 30px;
+      color: white;
+      font-weight: 700;
+      font-size: 1.2rem;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+      position: sticky;
+      top: 0;
+      z-index: 1000;
+    }
+
+    header .logo {
+      font-family: 'Roboto Slab', serif;
+      font-size: 1.7rem;
+      letter-spacing: 1px;
+    }
+
+    header nav a {
+      margin-left: 15px;
+      padding: 8px 18px;
+      border-radius: 25px;
+      font-weight: 600;
+      text-decoration: none;
+      transition: all 0.3s ease;
+    }
+
+    header nav a.btn-primary {
+      background-color: #1d5deb;
+      color: white;
+    }
+
+    header nav a.btn-primary:hover {
+      background-color: #184cbc;
+      transform: scale(1.05);
+    }
+
+    header nav a.btn-secondary {
+      background-color: #7f8c8d;
+      color: white;
+    }
+
+    header nav a.btn-secondary:hover {
+      background-color: #636e72;
+      transform: scale(1.05);
+    }
+
+    /* === ОСНОВНОЕ ОФОРМЛЕНИЕ === */
+    body {
+      font-family: 'Roboto', sans-serif;
+      background-color: #f0f8ff;
+      margin: 0;
+      padding: 0;
+      color: #333;
+      line-height: 1.6;
+    }
+
+    .container {
+      max-width: 1200px;
+      margin: 2rem auto;
+      padding: 20px;
+      background-color: white;
+      border-radius: 12px;
+      box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
+    }
+
+    /* === ЗАГОЛОВКИ === */
+    h1, h2, h3 {
+      color: rgb(0, 104, 147);
+      margin-bottom: 15px;
+      font-weight: 700;
+    }
+
+    /* === ФОРМА === */
+    .form-control {
+      border-radius: 8px;
+    }
+
+    /* === АДАПТИВНОСТЬ === */
+    @media (max-width: 768px) {
+      header {
+        flex-direction: column;
+        align-items: flex-start;
+      }
+
+      header nav {
+        margin-top: 10px;
+        width: 100%;
+        display: flex;
+        flex-wrap: wrap;
+        gap: 10px;
+      }
+
+      header nav a {
+        flex: 1 1 auto;
+        text-align: center;
+        margin-left: 0;
+      }
+
+      .container {
+        padding: 15px;
+      }
+    }
+  </style>
 </head>
-<body class="bg-light">
-<div class="container mt-5">
+
+<body>
+  <header>
+    <div class="logo">Портал преподавателя</div>
+    <nav>
+      <a href="teacher_dashboard.html" class="btn btn-secondary">Назад</a>
+    </nav>
+  </header>
+
+  <div class="container mt-5">
     <h2>Редактирование анкеты преподавателя</h2>
     <form id="editForm">
-        <div class="row">
-            <div class="col-md-6">
-                <div class="mb-3"><label>Фамилия</label><input type="text" name="last_name" class="form-control"></div>
-                <div class="mb-3"><label>Имя</label><input type="text" name="first_name" class="form-control"></div>
-                <div class="mb-3"><label>Отчество</label><input type="text" name="middle_name" class="form-control"></div>
-                <div class="mb-3"><label>Дата рождения</label><input type="date" name="birth_date" class="form-control"></div>
-                <div class="mb-3"><label>Email</label><input type="email" name="email" class="form-control"></div>
-                <div class="mb-3"><label>Телефон</label><input type="text" name="phone" class="form-control"></div>
-                <div class="mb-3"><label>Должность</label><input type="text" name="position" class="form-control"></div>
-                <div class="mb-3"><label>Кафедра</label><input type="text" name="department" class="form-control"></div>
-            </div>
-            <div class="col-md-6">
-                <div class="mb-3"><label>Образование</label><textarea name="education" class="form-control"></textarea></div>
-                <div class="mb-3"><label>Квалификация</label><textarea name="qualification" class="form-control"></textarea></div>
-                <div class="mb-3"><label>Стаж работы</label><input type="text" name="work_experience" class="form-control"></div>
-                <div class="mb-3"><label>Предметы</label><textarea name="subjects" class="form-control"></textarea></div>
-                <div class="mb-3"><label>Методы преподавания</label><textarea name="teaching_methods" class="form-control"></textarea></div>
-                <div class="mb-3"><label>Научная деятельность</label><textarea name="scientific_activity" class="form-control"></textarea></div>
-            </div>
+      <div class="row">
+        <div class="col-md-6">
+          <div class="mb-3">
+            <label for="last_name" class="form-label">Фамилия</label>
+            <input type="text" name="last_name" class="form-control">
+          </div>
+          <div class="mb-3">
+            <label for="first_name" class="form-label">Имя</label>
+            <input type="text" name="first_name" class="form-control">
+          </div>
+          <div class="mb-3">
+            <label for="middle_name" class="form-label">Отчество</label>
+            <input type="text" name="middle_name" class="form-control">
+          </div>
+          <div class="mb-3">
+            <label for="birth_date" class="form-label">Дата рождения</label>
+            <input type="date" name="birth_date" class="form-control">
+          </div>
+          <div class="mb-3">
+            <label for="email" class="form-label">Email</label>
+            <input type="email" name="email" class="form-control">
+          </div>
+          <div class="mb-3">
+            <label for="phone" class="form-label">Телефон</label>
+            <input type="text" name="phone" class="form-control">
+          </div>
+          <div class="mb-3">
+            <label for="position" class="form-label">Должность</label>
+            <input type="text" name="position" class="form-control">
+          </div>
+          <div class="mb-3">
+            <label for="department" class="form-label">Кафедра</label>
+            <input type="text" name="department" class="form-control">
+          </div>
         </div>
 
-        <div class="mb-3">
-            <label>Фото профиля</label>
-            <input type="file" name="profile_photo" class="form-control">
-            <div id="photoPreview" class="mt-2"></div>
+        <div class="col-md-6">
+          <div class="mb-3">
+            <label for="education" class="form-label">Образование</label>
+            <textarea name="education" class="form-control"></textarea>
+          </div>
+          <div class="mb-3">
+            <label for="qualification" class="form-label">Квалификация</label>
+            <textarea name="qualification" class="form-control"></textarea>
+          </div>
+          <div class="mb-3">
+            <label for="work_experience" class="form-label">Стаж работы</label>
+            <input type="text" name="work_experience" class="form-control">
+          </div>
+          <div class="mb-3">
+            <label for="subjects" class="form-label">Предметы</label>
+            <textarea name="subjects" class="form-control"></textarea>
+          </div>
+          <div class="mb-3">
+            <label for="teaching_methods" class="form-label">Методы преподавания</label>
+            <textarea name="teaching_methods" class="form-control"></textarea>
+          </div>
+          <div class="mb-3">
+            <label for="scientific_activity" class="form-label">Научная деятельность</label>
+            <textarea name="scientific_activity" class="form-control"></textarea>
+          </div>
         </div>
+      </div>
 
-        <button type="submit" class="btn btn-success">Сохранить</button>
-        <a href="teacher_dashboard.html" class="btn btn-secondary">Назад</a>
+      <div class="mb-3">
+        <label for="profile_photo" class="form-label">Фото профиля</label>
+        <input type="file" name="profile_photo" class="form-control">
+        <div id="photoPreview" class="mt-2"></div>
+      </div>
+
+      <button type="submit" class="btn btn-success">Сохранить</button>
+      <a href="teacher_dashboard.html" class="btn btn-secondary">Назад</a>
     </form>
-</div>
+  </div>
 
-<script>
-const currentUser = JSON.parse(localStorage.getItem("currentUser")) || {};
+  <script>
+    const currentUser = JSON.parse(localStorage.getItem("currentUser")) || {};
 
-window.onload = () => {
-  const teacher = JSON.parse(localStorage.getItem("teacher_" + currentUser.username)) || {};
-  const form = document.forms["editForm"];
-  for (let key in teacher) {
-    if (form[key]) form[key].value = teacher[key];
-  }
-};
+    window.onload = () => {
+      const teacher = JSON.parse(localStorage.getItem("teacher_" + currentUser.username)) || {};
+      const form = document.forms["editForm"];
+      for (let key in teacher) {
+        if (form[key]) form[key].value = teacher[key];
+      }
+    };
 
-document.getElementById("editForm").addEventListener("submit", function(event) {
-  event.preventDefault();
+    document.getElementById("editForm").addEventListener("submit", function(event) {
+      event.preventDefault();
 
-  const form = event.target;
-  const updatedTeacher = {};
-  for (let el of form.elements) {
-    if (el.name && el.type !== "file") {
-      updatedTeacher[el.name] = el.value;
-    }
-  }
+      const form = event.target;
+      const updatedTeacher = {};
+      for (let el of form.elements) {
+        if (el.name && el.type !== "file") {
+          updatedTeacher[el.name] = el.value;
+        }
+      }
 
-  localStorage.setItem("teacher_" + currentUser.username, JSON.stringify(updatedTeacher));
-  alert("Анкета сохранена!");
-  window.location.href = "teacher_dashboard.html";
-});
-
-</script>
-
+      localStorage.setItem("teacher_" + currentUser.username, JSON.stringify(updatedTeacher));
+      alert("Анкета сохранена!");
+      window.location.href = "teacher_dashboard.html";
+    });
+  </script>
 </body>
 </html>
