--- a/student_dashboard.html
+++ b/student_dashboard.html
@@ -1,107 +1,193 @@
-</html>
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Панель студента</title>
-<link href="student_dashboard.css" rel="stylesheet">
-<style>
-  /* Пример базовых стилей для кнопок */
-.btn {
-    display: inline-block;
-    padding: 4px 10px;
-    background-color: #007bff;
-    color: white;
-    text-decoration: none;
-    border-radius: 4px;
-    font-size: 0.9rem;
-}
-.btn:hover {
-    background-color: #0056b3;
-}
-.container {
-    max-width: 900px;
-    margin: 2rem auto;
-    padding: 0 1rem;
-}
-table {
-    width: 100%;
-    border-collapse: collapse;
-    margin-top: 1rem;
-}
-th, td {
-    border: 1px solid #ddd;
-    padding: 8px;
-    text-align: center;
- }
-th {
-    background: #f0f0f0;
-}
-</style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Панель студента</title>
+  <link rel="stylesheet" href="student_dashboard.css" />
+  <style>
+    body {
+      font-family: 'Segoe UI', sans-serif;
+      background-color: #f8f9fa;
+      margin: 0;
+      padding: 0;
+      color: #333;
+    }
+
+    header {
+      background-color: #006893;
+      color: white;
+      padding: 15px 20px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      flex-wrap: wrap;
+    }
+
+    .logo {
+      font-size: 1.5rem;
+      font-weight: bold;
+    }
+
+    nav a {
+      color: white;
+      text-decoration: none;
+      font-size: 1rem;
+      background-color: #1d5deb;
+      padding: 8px 16px;
+      border-radius: 20px;
+      transition: background-color 0.3s;
+    }
+
+    nav a:hover {
+      background-color: #184cbc;
+    }
+
+    .container {
+      max-width: 1000px;
+      margin: 2rem auto;
+      padding: 0 1rem;
+    }
+
+    h1, h3 {
+      color: #006893;
+    }
+
+    .table-wrapper {
+      overflow-x: auto;
+    }
+
+    table {
+      width: 100%;
+      border-collapse: collapse;
+      margin-top: 1rem;
+      min-width: 600px;
+    }
+
+    th, td {
+      border: 1px solid #ccc;
+      padding: 10px;
+      text-align: center;
+      font-size: 0.95rem;
+    }
+
+    th {
+      background-color: #e9f2f8;
+    }
+
+    .btn {
+      display: inline-block;
+      padding: 6px 12px;
+      background-color: #007bff;
+      color: white;
+      text-decoration: none;
+      border-radius: 5px;
+      font-size: 0.9rem;
+    }
+
+    .btn:hover {
+      background-color: #0056b3;
+    }
+
+    #no-data-msg {
+      color: #666;
+      font-style: italic;
+      margin-top: 1rem;
+    }
+
+    @media (max-width: 600px) {
+      nav {
+        width: 100%;
+        margin-top: 10px;
+      }
+
+      nav a {
+        display: block;
+        width: 100%;
+        text-align: center;
+        margin-bottom: 5px;
+      }
+
+      .logo {
+        width: 100%;
+        text-align: center;
+        margin-bottom: 10px;
+      }
+    }
+  </style>
 </head>
 <body>
+
 <header>
-<div class="logo">ГАППОУ КК ЛСПК</div>
-<nav>
+  <div class="logo">ГАППОУ КК ЛСПК</div>
+  <nav>
     <a href="index.html">Выйти</a>
-</nav>
+  </nav>
 </header>
 
 <div class="container">
-<h1>Панель студента</h1>
-<p>Добро пожаловать, Студент!</p>
+  <h1>Панель студента</h1>
+  <p>Добро пожаловать, студент!</p>
 
-<h3>Список преподавателей</h3>
-<table id="teachers-table">
-    <thead>
-    <tr>
-        <th>Фамилия</th>
-        <th>Имя</th>
-        <th>Отчество</th>
-        <th>Должность</th>
-        <th>Действия</th>
-    </tr>
-    </thead>
-    <tbody>
-    <!-- Заполняется JS -->
-    </tbody>
-</table>
+  <h3>Список преподавателей</h3>
+  <div class="table-wrapper">
+    <table id="teachers-table">
+      <thead>
+        <tr>
+          <th>Фамилия</th>
+          <th>Имя</th>
+          <th>Отчество</th>
+          <th>Должность</th>
+          <th>Действия</th>
+        </tr>
+      </thead>
+      <tbody>
+        <!-- Заполняется JS -->
+      </tbody>
+    </table>
+  </div>
 
-<p id="no-data-msg" style="color: #666; font-style: italic; margin-top: 1rem;"></p>
+  <p id="no-data-msg"></p>
 </div>
 
 <script>
-  // Проверка, есть ли в localStorage данные преподавателей
-let teachers = JSON.parse(localStorage.getItem("teachers"));
+  let teachers = JSON.parse(localStorage.getItem("teachers"));
 
-  // Если данных нет, показываем сообщение и инициализируем пустой массив
-if (!teachers || teachers.length === 0) {
-    document.getElementById("no-data-msg").textContent = "Данных о преподавателях пока нет.";
+  const tbody = document.querySelector("#teachers-table tbody");
+  const noDataMsg = document.getElementById("no-data-msg");
+
+  if (!teachers || teachers.length === 0) {
+    noDataMsg.textContent = "Данных о преподавателях пока нет.";
     teachers = [];
-} else {
-    document.getElementById("no-data-msg").textContent = "";
-}
+  } else {
+    noDataMsg.textContent = "";
+    renderTable();
+  }
 
-const tbody = document.querySelector("#teachers-table tbody");
-
-function renderTable() {
+  function renderTable() {
     tbody.innerHTML = "";
-    if (teachers.length === 0) return; // Если нет преподавателей, не выводим таблицу
-    teachers.forEach(t => {
-    const tr = document.createElement("tr");
-    tr.innerHTML = `
-        <td>${t.last_name}</td>
-        <td>${t.first_name}</td>
-        <td>${t.middle_name}</td>
-        <td>${t.position}</td>
-        <td><a class="btn" href="teacher_profile.html?id=${encodeURIComponent(t.user_id)}">Просмотр анкеты</a></td>
-    `;
-    tbody.appendChild(tr);
-    });
-}
 
-renderTable();
+    teachers.forEach(t => {
+      // Получаем анкету преподавателя
+      const profile = JSON.parse(localStorage.getItem("teacher_" + t.username));
+      if (!profile || !profile.first_name || !profile.last_name) return;
+
+      const tr = document.createElement("tr");
+      tr.innerHTML = `
+        <td>${profile.last_name || '-'}</td>
+        <td>${profile.first_name || '-'}</td>
+        <td>${profile.middle_name || '-'}</td>
+        <td>${profile.position || '-'}</td>
+        <td><a class="btn" href="teacher_profile.html?id=${encodeURIComponent(t.user_id)}">Просмотр анкеты</a></td>
+      `;
+      tbody.appendChild(tr);
+    });
+
+    if (tbody.children.length === 0) {
+      noDataMsg.textContent = "Пока нет заполненных анкет преподавателей.";
+    }
+  }
 </script>
+
 </body>
 </html>
