--- a/student_dashboard.html
+++ b/student_dashboard.html
@@ -119,7 +119,10 @@
 <body>
 
 <header>
-  <div class="logo">ГАППОУ КК ЛСПК</div>
+<div class="logo">
+    <img src="img/logo.png" alt="Логотип МойПедагог" class="logo-img">
+    <span>МойПедагог</span>
+</div>
   <nav>
     <a href="index.html">Выйти</a>
   </nav>
