--- a/index.html
+++ b/index.html
@@ -365,10 +365,10 @@
 <main>
 <section class="intro">
     <h1>Добро пожаловать!</h1>
-    <p>Автоматизируйте работу преподавателей и студентов Ленинградского социально-педагогического колледжа.<br>
-    Преподаватели могут заполнять и редактировать анкеты, добавлять учебную информацию, а студенты — просматривать анкеты преподавателей и получать уведомления.</p>
+    <p>"Образование начинается с педагога. Мы делаем его доступным."</p>
     <a href="register.html" class="main-btn">Начать работу</a>
-    <blockquote class="motto">"Образование начинается с педагога. Мы делаем его доступным."</blockquote>
+    <blockquote class="motto">Автоматизируйте работу преподавателей и студентов Ленинградского социально-педагогического колледжа.<br>
+    Преподаватели могут заполнять и редактировать анкеты, добавлять учебную информацию, а студенты — просматривать анкеты преподавателей и получать уведомления.</blockquote>
 </section>
 
 <hr class="section-line">
