--- a/edit_teacher.html
+++ b/edit_teacher.html
@@ -120,7 +120,10 @@
 
 <body>
   <header>
-    <div class="logo">Портал преподавателя</div>
+<div class="logo">
+    <img src="img/logo.png" alt="Логотип МойПедагог" class="logo-img">
+    <span>МойПедагог</span>
+</div>
     <nav>
       <a href="teacher_dashboard.html" class="btn btn-secondary">Назад</a>
     </nav>
