--- a/student_dashboard.html
+++ b/student_dashboard.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="student_dashboard.css" />
   <style>
     body {
-      font-family: 'Segoe UI', sans-serif;
+      font-family: 'Roboto', sans-serif;
       background-color: #f8f9fa;
       margin: 0;
       padding: 0;
