--- a/admin_dashboard.html
+++ b/admin_dashboard.html
@@ -42,6 +42,31 @@
       height: 40px;
     }
 
+            table {
+            width: 100%;
+            border-collapse: collapse;
+            margin-top: 20px;
+        }
+
+        table thead {
+            background-color: #006893;
+            color: white;
+        }
+
+        table th, table td {
+            padding: 12px 15px;
+            border: 1px solid #ddd;
+            text-align: left;
+        }
+
+        table tbody tr:nth-child(even) {
+            background-color: #f2f2f2;
+        }
+
+        table tbody tr:hover {
+            background-color: #e0f7fa;
+        }
+
     /* Кнопка гамбургер-меню */
     .menu-toggle {
       display: none;
