--- a/register.html
+++ b/register.html
@@ -9,14 +9,31 @@
 <body class="bg-light">
 
 <header>
-  <div class="logo">
-      <img src="img/logo.png" alt="Логотип МойПедагог" class="logo-img">
-      <span>МойПедагог</span>
-  </div>
-  <button class="menu-toggle" id="menuToggle">&#9776;</button>
-  <nav>
-      <a href="index.html">Главная</a>
-  </nav>
+<div class="logo">
+    <img src="img/logo.png" alt="Логотип МойПедагог" class="logo-img">
+    <span>МойПедагог</span>
+</div>
+
+<!-- Кнопка гамбургер-меню -->
+<button class="menu-toggle" aria-label="Меню">
+    <span></span>
+    <span></span>
+    <span></span>
+</button>
+
+<!-- Обычное меню (скрывается на мобильных) -->
+<nav>
+    <a href="index.html">Главная</a>
+    <a href="login.html">Вход</a>
+    <a href="about.html">О системе</a>
+</nav>
+
+<!-- Мобильное меню -->
+<div class="mobile-menu">
+    <a href="index.html">Главная</a>
+    <a href="login.html">Вход</a>
+    <a href="about.html">О системе</a>
+</div>
 </header>
 
 <div class="container">
