--- a/login.html
+++ b/login.html
@@ -30,7 +30,7 @@
 
 <!-- Мобильное меню -->
 <div class="mobile-menu">
-    <a href="index.html">Главная</a>
+    <a href="login.html">Вход</a>
     <a href="register.html">Регистрация</a>
     <a href="about.html">О системе</a>
 </div>
