--- a/login.html
+++ b/login.html
@@ -23,14 +23,14 @@
 
 <!-- Обычное меню (скрывается на мобильных) -->
 <nav>
-    <a href="login.html">Вход</a>
+    <a href="index.html">Главная</a>
     <a href="register.html">Регистрация</a>
     <a href="about.html">О системе</a>
 </nav>
 
 <!-- Мобильное меню -->
 <div class="mobile-menu">
-    <a href="login.html">Вход</a>
+    <a href="index.html">Главная</a>
     <a href="register.html">Регистрация</a>
     <a href="about.html">О системе</a>
 </div>
