--- a/teacher_dashboard.html
+++ b/teacher_dashboard.html
@@ -430,7 +430,7 @@
     </nav>
 
     <div class="mobile-menu">
-        <a href="logout.php">Выйти</a>
+        <a href="index.html">Выйти</a>
     </div>
 </header>
 
@@ -441,8 +441,8 @@
     <img id="mobile-photo" src="img/default-teacher.jpg" alt="Фото преподавателя" class="mobile-photo">
 
     <div class="btn-group">
-        <a href="edit_teacher.php" class="btn btn-primary">Редактировать анкету</a>
-        <a href="edit_schedule.php" class="btn btn-primary">Редактировать расписание</a>
+        <a href="edit_teacher.html" class="btn btn-primary">Редактировать анкету</a>
+        <a href="edit_schedule.html" class="btn btn-primary">Редактировать расписание</a>
     </div>
 
     <div class="profile-wrapper">
